--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "firebase": "^9.8.3",
     "framer-motion": "^6",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
